--- a/Projet/monappli/templates/Liste_mots.tmpl
+++ b/Projet/monappli/templates/Liste_mots.tmpl
@@ -131,6 +131,8 @@ div.texte { font-size: 22px ;
     <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a>
     <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a>
     <a href="http://127.0.0.1:8000/monappli/requete6" >Requete 6</a>
+    <a href="http://127.0.0.1:8000/monappli/requete7" >Requete 7</a>
+
 </div>
 
 <img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
