--- a/Projet/monappli/templates/employeXmail.tmpl
+++ b/Projet/monappli/templates/employeXmail.tmpl
@@ -189,6 +189,8 @@ table.mon_tableau  {
     <p>Ma date de fin : {{ date_fin }}</p>
     <p>Mon seuil : {{ seuil }}</p>
 
+    <p>Mon seuil : {{ rows1 }}</p>
+
     <br>
 
     <br>
@@ -197,6 +199,8 @@ table.mon_tableau  {
     Voici les principaux employés ayant envoyés/reçus plus de {{seuil}} mails entre le {{ date_debut }} et le {{ date_fin }}.
 
 </div>
+
+<p> liste1 : {{ liste1 }}</p>
 
 <br>
 
