--- a/Projet/monappli/templates/index.tmpl
+++ b/Projet/monappli/templates/index.tmpl
@@ -123,13 +123,13 @@ div.texte { font-size: 22px ;
 
 <div class="bande-couleur">
     <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>
-    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a>
-    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a>
-    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a>
-    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a>
-    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a>
-    <a href="http://127.0.0.1:8000/monappli/requete6" >Requete 6</a>
-    <a href="http://127.0.0.1:8000/monappli/requete7" >Requete 7</a>
+    <a href="http://127.0.0.1:8000/monappli/requete1" >Attributs</a>
+    <a href="http://127.0.0.1:8000/monappli/requete2" >X mails</a>
+    <a href="http://127.0.0.1:8000/monappli/requete3" >Communication</a>
+    <a href="http://127.0.0.1:8000/monappli/request4" >Couple employés</a>
+    <a href="http://127.0.0.1:8000/monappli/requete5" >Jour</a>
+    <a href="http://127.0.0.1:8000/monappli/requete6" >mots</a>
+    <a href="http://127.0.0.1:8000/monappli/requete7" >Conversation</a>
 </div>
 
 <img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
@@ -163,28 +163,32 @@ Explication des requêtes disponible sur le site:
 <br>
 <br>
 
-<p>Requete 1: Affiche les attributs d’un employé (identité, catégorie, e-mails) en connaissant son nom ou
+<p>Attributs: Affiche les attributs d’un employé (identité, catégorie, e-mails) en connaissant son nom ou
 l’une de ses adresses e-mail
 
 <br>
 <br>
-Requete 2: Affiche les employés ayant envoyé et/ou reçu plus que (resp. moins que) x mails dans un intervalle
+X mails: Affiche les employés ayant envoyé et/ou reçu plus que (resp. moins que) x mails dans un intervalle
 de temps choisit
 <br>
 <br>
-Requete 3: Affiche la liste des employés ayant communiqué avec un employé donné sur un intervalle de
+Communication: Affiche la liste des employés ayant communiqué avec un employé donné sur un intervalle de
 temps donné
 
 <br>
 <br>
-Requete 4: Affiche les couples d’employés ayant communiqué dans un intervalle de temps choisit
+Couple employés: Affiche les couples d’employés ayant communiqué dans un intervalle de temps choisit
 <br>
 <br>
-Requete 5: Affiche les jours dans une période donnée ayant connu le plus grand nombre d’échanges de
+Jour: Affiche les jours dans une période donnée ayant connu le plus grand nombre d’échanges de
 mails, on peut choisir d'afficher les echanges internes (entre employés de la même entreprise) ou externes ou les deux
 <br>
 <br>
-Requete 6: Afficher les mails contenant une liste de mots déterminés</p>
+Mots: Afficher les mails contenant une liste de mots déterminés
+<br>
+<br>
+Conversation: Affiche les conversations entre deux employés donnés sur un intervalle de temps donné
+</p>
 
     <br>
     <br>
