--- a/Projet/monappli/templates/index.tmpl
+++ b/Projet/monappli/templates/index.tmpl
@@ -126,35 +126,25 @@ div.texte { font-size: 22px ;
     <a href="http://127.0.0.1:8000/monappli/requete1" >Attributs</a>
     <a href="http://127.0.0.1:8000/monappli/requete2" >X mails</a>
     <a href="http://127.0.0.1:8000/monappli/requete3" >Communication</a>
-    <a href="http://127.0.0.1:8000/monappli/request4" >Couple employés</a>
-    <a href="http://127.0.0.1:8000/monappli/requete5" >Jour</a>
+    <a href="http://127.0.0.1:8000/monappli/request4" >Couples employés</a>
+    <a href="http://127.0.0.1:8000/monappli/requete5" >Jours</a>
     <a href="http://127.0.0.1:8000/monappli/requete6" >mots</a>
-    <a href="http://127.0.0.1:8000/monappli/requete7" >Conversation</a>
+    <a href="http://127.0.0.1:8000/monappli/requete7" >Conversations</a>
 </div>
 
 <img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
     <br>
-<!-- Contenu de la page -->
+
+<br>
 <div class="texte">
 
-Contexte:
-L’affaire Enron (https://fr.wikipedia.org/wiki/Scandale_Enron) est connue comme l’un des plus
-grands cas de manipulation financière aux États-Unis. Parmi les diverses enquêtes judiciaires
-menées, la fouille des contenus des e-mails a constitué une piste essentielle pour comprendre la
-dynamique entre les différents acteurs et leur rôle dans l’affaire.
+
+Nous avons développé une application locale avec l’API Django sur la base de données Enron, afin d’enquêter sur l’ensemble des mails de cette entreprise américaine du secteur de l’énergie ayant fait faillite en 2001 après un cas de fraude et de manipulation financière
 </div>
     <br>
-    <br>
 
 <div class="texte">
-Sujet:
-Il s’agit de développer une application destinée aux enquêteurs (non informaticiens). Elle doit
-leur proposer un jeu de formulaires leur permettant d’explorer, de visualiser et d’analyser les
-données. Un formulaire correspond à une interrogation/visualisation, il doit permettre à l’enquêteur
-de fixer différents paramètres de la requête ainsi que d’éventuelles options pour la visualisation. Il
-est nécessaire ici de se glisser dans la peau d’un enquêteur pour imaginer quelles requêtes sont
-pertinentes, et quelles visualisations sont judicieuses. Toute réalisation allant au-delà du minimum
-requis se traduira par des points de bonus au niveau de la note finale
+L'application s’adresse à des enquêteurs fictifs ayant besoin d'effectuer des recherches sur l’ensemble des mails des employés de cette entreprise pour comprendre leur rôle dans cette affaire.
 </div>
 
     <br>
@@ -172,22 +162,22 @@ X mails: Affiche les employés ayant envoyé et/ou reçu plus que (resp. moins q
 de temps choisit
 <br>
 <br>
-Communication: Affiche la liste des employés ayant communiqué avec un employé donné sur un intervalle de
+Communications: Affiche la liste des employés ayant communiqué avec un employé donné sur un intervalle de
 temps donné
 
 <br>
 <br>
-Couple employés: Affiche les couples d’employés ayant communiqué dans un intervalle de temps choisit
+Couples employés: Affiche les couples d’employés ayant communiqué dans un intervalle de temps choisit
 <br>
 <br>
-Jour: Affiche les jours dans une période donnée ayant connu le plus grand nombre d’échanges de
+Jours: Affiche les jours dans une période donnée ayant connu le plus grand nombre d’échanges de
 mails, on peut choisir d'afficher les echanges internes (entre employés de la même entreprise) ou externes ou les deux
 <br>
 <br>
 Mots: Afficher les mails contenant une liste de mots déterminés
 <br>
 <br>
-Conversation: Affiche les conversations entre deux employés donnés sur un intervalle de temps donné
+Conversations: Affiche les conversations entre deux employés donnés sur un intervalle de temps donné
 </p>
 
     <br>
