--- a/Projet/monappli/templates/List_comu_empl.tmpl
+++ b/Projet/monappli/templates/List_comu_empl.tmpl
@@ -139,13 +139,13 @@ table.mon_tableau  {
 
 <div class="bande-couleur">
     <a href="http://127.0.0.1:8000/monappli/index" >Accueil</a>
-    <a href="http://127.0.0.1:8000/monappli/requete1" >Requete 1</a>
-    <a href="http://127.0.0.1:8000/monappli/requete2" >Requete 2</a>
-    <a href="http://127.0.0.1:8000/monappli/requete3" >Requete 3</a>
-    <a href="http://127.0.0.1:8000/monappli/request4" >Requete 4</a>
-    <a href="http://127.0.0.1:8000/monappli/requete5" >Requete 5</a>
-    <a href="http://127.0.0.1:8000/monappli/requete6" >Requete 6</a>
-    <a href="http://127.0.0.1:8000/monappli/requete7" >Requete 7</a>
+    <a href="http://127.0.0.1:8000/monappli/requete1" >Attributs</a>
+    <a href="http://127.0.0.1:8000/monappli/requete2" >X mails</a>
+    <a href="http://127.0.0.1:8000/monappli/requete3" >Communication</a>
+    <a href="http://127.0.0.1:8000/monappli/request4" >Couples employés</a>
+    <a href="http://127.0.0.1:8000/monappli/requete5" >Jours</a>
+    <a href="http://127.0.0.1:8000/monappli/requete6" >mots</a>
+    <a href="http://127.0.0.1:8000/monappli/requete7" >Conversations</a>
 </div>
 
 <img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
@@ -156,6 +156,14 @@ table.mon_tableau  {
     <p>Ma date de fin : {{ date_fin }}</p>
     <p> Mon employé : {{ employe_nom }} {{ employe_prenom }}</p>
     <br>
+
+{% if liste33|length_is:"0" %}
+    <div> Il n'y a pas eu de mails échangés avec {{ employe_nom }} {{ employe_prenom }} entre le {{ date_debut }} et le {{ date_fin }}. </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    {% else %}
 
 
 <div class="texte">
@@ -244,6 +252,7 @@ L'histogramme ci-dessous représente le nombre de mails envoyés/reçus pour les
     </div>
 </div>
 
+{% endif %}
 
 
 
